# FlowReg-ATMLproject-USI

./: .env.example  .gitignore  README.md  new_envs_summary.md  pyproject.toml  summary.md
configs/: baseline_a2c_atari.yaml  baseline_ppo_fourrooms.yaml  flowreg_a2c_atari.yaml  flowreg_a2c_atari_stability.yaml  flowreg_ppo_doorkey.yaml  flowreg_ppo_dynamic_obstacles.yaml  flowreg_ppo_fourrooms.yaml  flowreg_ppo_fourrooms_lambda01.yaml  flowreg_ppo_fourrooms_smoke.yaml
configs/atari/: baseline_a2c_atari.yaml  flowreg_a2c_atari.yaml
configs/atari/tests/: flowreg_a2c_atari_stability.yaml
configs/minigrid/: baseline_ppo_doorkey.yaml  baseline_ppo_dynamic_obstacles.yaml  baseline_ppo_fourrooms.yaml  flowreg_ppo_doorkey.yaml  flowreg_ppo_dynamic_obstacles.yaml  flowreg_ppo_fourrooms.yaml
configs/minigrid/tests/: flowreg_ppo_fourrooms_lambda01.yaml  flowreg_ppo_fourrooms_smoke.yaml
scripts/: README.md  analyze_fourrooms_10seeds.sh  analyze_phase4_fourrooms_100k.sh  eval_baseline.sh  fourrooms_9_seeds.sh  phase1_smoke.sh  run_anal_dyn_door.sh  run_atari_full.sh  run_atari_smoke.sh  train_baseline.sh  train_flowreg.sh
scripts/atari/: run_all_atari_3seeds_3m.sh  run_breakout_3seeds_3m.sh  run_qbert_3seeds_3m.sh
scripts/atari/tests/: run_breakout_1m.sh  run_qbert_1m.sh
scripts/minigrid/: make_demo.sh  run_all_minigrid_10seeds.sh  run_doorkey_10seeds.sh  run_dynamic_obstacles_10seeds.sh  run_fourrooms_10seeds.sh
src/flowreg/: __init__.py  analyze_runs.py  config.py  demo.py  envs.py  eval_baseline.py  flow.py  flowreg_a2c.py  flowreg_ppo.py  policies.py  smoke_phase1.py  train_baseline.py  train_baseline_a2c.py  train_flowreg.py  train_flowreg_a2c.py  train_utils.py  wandb_utils.py
tests/: test_flowreg.py
